add details and delete file

--- a/KTMKomuter/Views/KtmKomuter/Details.cshtml
+++ b/KTMKomuter/Views/KtmKomuter/Details.cshtml
@@ -8,9 +8,9 @@
 
     <p>
         <label>Id:</label>
-        @Html.DisplayFor(x => x.Id)
+        @Html.DisplayFor(x => x.ViewId)
     </p>
-   
+
     <br />
     <h5>User Information</h5>
     <p>
@@ -28,10 +28,10 @@
     </p>
 
     <br />
-   
+
     <h5>Train Information</h5>
     <p>
-        <label>From: </label>
+        <label>From:</label>
         @Html.DisplayFor(x => x.DictCurrentDestination[Model.IndexCurrentDestination])
     </p>
     <p>
