--- a/KTMKomuter/Views/KtmKomuter/Delete.cshtml
+++ b/KTMKomuter/Views/KtmKomuter/Delete.cshtml
@@ -8,9 +8,9 @@
 
     <p>
         <label>Id:</label>
-        @Html.DisplayFor(x => x.Id)
+        @Html.DisplayFor(x => x.ViewId)
     </p>
-   
+
     <br />
     <h5>User Information</h5>
     <p>
@@ -28,10 +28,10 @@
     </p>
 
     <br />
-   
+
     <h5>Train Information</h5>
     <p>
-        <label>From: </label>
+        <label>From:</label>
         @Html.DisplayFor(x => x.DictCurrentDestination[Model.IndexCurrentDestination])
     </p>
     <p>
@@ -45,6 +45,13 @@
     <p>
         <label>After Discount price :</label>
         @Html.DisplayFor(x => x.AfterDiscount)
+    </p>
+
+    <p>
+        @using (Html.BeginForm())
+        {
+            <input type="submit" value="Confirm Delete" />
+        }
     </p>
 
     <p>
