--- a/KTMKomuter/Views/KtmKomuter/Index.cshtml
+++ b/KTMKomuter/Views/KtmKomuter/Index.cshtml
@@ -69,7 +69,7 @@
             <td>
                     @Html.ActionLink("Details", "Details", null, new { id = item.ViewId }, new { @class = "btn btn-sm btn-success" })
                     @Html.ActionLink("", "Edit", null, new { id = item.ViewId }, new { @class = "bi bi-pencil-square btn btn-sm btn-primary" })
-                    @Html.ActionLink("", "Delete", null, new { id = item.ViewId }, new { @class = "bi bi-trash3 btn btn-sm btn-danger" })
+                    @Html.ActionLink("Delete", "Delete", null, new { id = item.ViewId }, new { @class = "bi bi-trash3 btn btn-sm btn-danger" })
             </td>
         </tr>
 }
