add link to button 'Index"

--- a/KTMKomuter/Views/KtmKomuter/Edit.cshtml
+++ b/KTMKomuter/Views/KtmKomuter/Edit.cshtml
@@ -35,5 +35,8 @@
         <p>
             <input type="submit" value="Submit" />
         </p>
+        <p>
+            @Html.ActionLink("Back to List", "Index")
+        </p>
     }
 </body>
