--- a/KTMKomuter/Views/KtmKomuter/Index.cshtml
+++ b/KTMKomuter/Views/KtmKomuter/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "User List";
 }
 
-<h1>KTM User List</h1>
+<h1>User List</h1>
 
 <p>
     @Html.ActionLink(" New User", "TrainTicket", null, null, new { @class = "bi bi-person-add btn btn-primary" })
