--- a/KTMKomuter/Views/KtmKomuter/TrainTicket.cshtml
+++ b/KTMKomuter/Views/KtmKomuter/TrainTicket.cshtml
@@ -3,83 +3,94 @@
 
 <head>
     <title>Train Form</title>
-
+    <style>
+        .navbar{
+            margin-bottom:0 !important;
+        }
+    </style>
 </head>
 <body>
-    @using (Html.BeginForm())
-    {
+    <div class="mx-auto" style="max-width:800px;">
+        @using (Html.BeginForm())
+        {
+            <div class="traininfo1">
+                <div class="spacer"></div>
+                <div>
+                    <h5>Train Information</h5>
+                    <div class="row">
+                        <div class="col-md">
+                            <div class="form-floating">
+                                @Html.DropDownListFor(x => x.IndexCurrentDestination,
+                                         new SelectList(Model.DictCurrentDestination, "Key", "Value"), "Select your origin",
+                                         new { @class = "form-select", id = "floatingSelect" })
+                                <label for="floatingSelect">@Html.DisplayNameFor(x => x.IndexCurrentDestination)</label>
+                            </div>
+                            @Html.ValidationMessageFor(x => x.IndexCurrentDestination, "",
+                                     new { @class = "text-danger" })
+                        </div>
 
-        <h5>Booking train route Form</h5>
-        <div class="row">
-            <p class="col-md-4">
-                <label>@Html.DisplayNameFor(x => x.PurchaserName)</label>
-                @Html.TextBoxFor(x => x.PurchaserName, new { @class = "form-control" })
-                @Html.ValidationMessageFor(x => x.PurchaserName, "",
-                         new { @class = "text-danger" })
-            </p>
-            
-        </div>
+                        <div class="col-md">
+                            <div class="form-floating">
+                                @Html.DropDownListFor(x => x.IndexToDestination,
+                                         new SelectList(Model.DictToDestination, "Key", "Value"), "Select your destination",
+                                         new { @class = "form-select" })
+                                <label for="floatingSelect">@Html.DisplayNameFor(x => x.IndexToDestination)</label>
+                            </div>
+                            @Html.ValidationMessageFor(x => x.IndexToDestination, "",
+                                     new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-        <div class="row">
+            <h5 class="mt-4 mb-0">Personal Information</h5>
+            <label class="mt-0 mb-3 label-sm-grey">Fill in your personal information here.</label>
 
-            <p class="col-md-4">
-                <label>@Html.DisplayNameFor(x => x.IdentityCardOrPassportNumber)</label>
-                @Html.TextBoxFor(x => x.IdentityCardOrPassportNumber, new { @class = "form-control" })
-                @Html.ValidationMessageFor(x => x.IdentityCardOrPassportNumber, "",
-                         new { @class = "text-danger" })
-            </p>
-        </div>
-        
+            <div class="card">
+                <div class="card-body p-4">
+                    <div class="row">
+                        <p class="col">
+                            <label class="label-sm-grey mb-1">@Html.DisplayNameFor(x => x.PurchaserName)</label>
+                            @Html.TextBoxFor(x => x.PurchaserName, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.PurchaserName, "",
+                                     new { @class = "text-danger" })
+                        </p>
 
-        <div class="row">
+                    </div>
 
-            <p class="col-md-4">
-                <label>@Html.DisplayNameFor(x => x.EmailAddress)</label>
-                @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control" })
-            </p>
-        </div>
+                    <div class="row">
 
-        
+                        <p class="col-md">
+                            <label class="label-sm-grey  mb-1">@Html.DisplayNameFor(x => x.IdentityCardOrPassportNumber)</label>
+                            @Html.TextBoxFor(x => x.IdentityCardOrPassportNumber, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.IdentityCardOrPassportNumber, "",
+                                     new { @class = "text-danger" })
+                        </p>
+                        <p class="col-md">
+                            <label class="label-sm-grey  mb-1">@Html.DisplayNameFor(x => x.EmailAddress)</label>
+                            @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control" })
+                        </p>
+                    </div>
 
+                    <div class="row">
 
-
-
-        <h5>Train Information</h5>
-        <div class="row">
-            <p class="col-md-4">
-                <label>@Html.DisplayNameFor(x => x.IndexCurrentDestination)</label>
-                @Html.DropDownListFor(x => x.IndexCurrentDestination,
-                         new SelectList(Model.DictCurrentDestination, "Key", "Value"), "Select your current destination:",
-                         new { @class = "form-control" })
-                @Html.ValidationMessageFor(x => x.IndexCurrentDestination, "",
-                         new { @class = "text-danger" })
-            </p>
-
-            <p class="col-md-4">
-                <label>@Html.DisplayNameFor(x => x.IndexToDestination)</label>
-                @Html.DropDownListFor(x => x.IndexToDestination,
-                         new SelectList(Model.DictToDestination, "Key", "Value"), "Select your desired destination:",
-                         new { @class = "form-control" })
-                @Html.ValidationMessageFor(x => x.IndexToDestination, "",
-                         new { @class = "text-danger" })
-            </p>
-        </div>
-
-        <div class="row">
-
-            <p class="col-md-4">
-                <label>@Html.DisplayNameFor(x => x.Category)</label>
-                @Html.DropDownListFor(x => x.Category,
-                         new SelectList(Model.DictCategoryDiscount, "Key", "Value"), "Select your categories",
-                         new { @class = "form-control" })
-                @Html.ValidationMessageFor(x => x.Category, "",
-                         new { @class = "text-danger" })
-            </p>
-        </div>
-        <br />
-        <p>
-            <input type="submit" value="Submit" class="btn btn-primary" />
-        </p>
+                        <p class="col-md">
+                            <label class="label-sm-grey  mb-1">@Html.DisplayNameFor(x => x.Category)</label>
+                            @Html.DropDownListFor(x => x.Category,
+                                     new SelectList(Model.DictCategoryDiscount, "Key", "Value"), "Select your categories",
+                                     new { @class = "form-select" })
+                            @Html.ValidationMessageFor(x => x.Category, "",
+                                     new { @class = "text-danger" })
+                        </p>
+                        <p class="col-md"></p>
+                    </div>
+                </div>
+                <div class="card-footer p-4">
+                        <input type="submit" value="Submit" class="toright px-4 btn btn-primary" />
+                </div>
+                
+            </div>
 
         }
+    </div>
 </body>
