--- a/KTMKomuter/Views/KtmKomuter/Index.cshtml
+++ b/KTMKomuter/Views/KtmKomuter/Index.cshtml
@@ -3,9 +3,8 @@
 @{
     ViewData["Title"] = "User List";
 }
-
+<div class="mx-auto">
 <h1>User List</h1>
-
 <p>
     @Html.ActionLink(" New User", "TrainTicket", null, null, new { @class = "bi bi-person-add btn btn-primary" })
 </p>
@@ -76,3 +75,4 @@
 }
     </tbody>
 </table>
+</div>
